2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Re-added graphics under gfx

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Removed broken (during migration) xpm directory

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Migrated all code from CVS to SVN
	* Added config dir to root

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed dce's save as to actually save the file
	* Fixed qlcchannel's saveXML to write group stuff correctly

2007-May-21  Heikki Junnila <hjunnila@users.sf.net>
	* Added file extension checks and conversions for the new .qxf format.

2007-May-21  Heikki Junnila <hjunnila@users.sf.net>
	* Added dce/src/editchannel.* to cvs

2007-May-18  Heikki Junnila <hjunnila@users.sf.net>
	* Added qlcfixture, qlcfixturemode, qlcphysical, qlcchannel and
	  qlccapability to libs/common that should, in the future, replace
	  old deviceclass, capability and logicalchannel.
	* Changed deviceclasseditor accordingly. Don't use it any longer
	  for editing old deviceclasses. Everything is converted to
	  qlcfixture etc. classes. 
	* Main has not been changed yet...

2007-Apr-22  Heikki Junnila <hjunnila@users.sf.net>
	* Renamed bootstrap to autogen.sh in create-debian-package.sh

2007-Apr-22  Heikki Junnila <hjunnila@users.sf.net>
	* Added forgotten configkeys.h to dce/src

2007-Apr-22  Heikki Junnila <hjunnila@users.sf.net>
	* Moved deviceclass.h&cpp, logicalchannel.h&cpp, capability.h&cpp and
	  types.h from main/src to libs/common to make things more sensible.

2007-Apr-10  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed LLA plugin compilation

2007-Mar-31  Heikki Junnila <hjunnila@users.sf.net>
	* Added XML stuff to EFX & functioncollection

2007-Mar-30  Heikki Junnila <hjunnila@users.sf.net>
	* Added libs/lla to CVS. Not sure, whether they work.

2007-Mar-29  Heikki Junnila <hjunnila@users.sf.net>
	* Added preliminary functions for saving workspace data in XML format.
	* Added configure options for plugin enable/disable.
