@@ -1,4 +1,10 @@
 2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
+	* Fixed QLCCapability::operator=() to return *this
+	* Fixed QLCFixtureMode::channelNumber() to return KChannelInvalid
+	  instead of -1 for errors.
+	* Changed xpm/Makefile to gfx/Makefile in configure.ac.
+
+2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
 	* Re-added graphics under gfx
 
 2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
